--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html{
     scroll-behavior: smooth;
-   
+    /* width: 100%; */
 }
 html::-webkit-scrollbar{
     display: none;
@@ -194,7 +194,6 @@ nav ul li span:hover::after{
     width: 20%; /* Adjust the width as needed */
     height: auto; /* Adjust the height as needed or remove to maintain aspect ratio */
     border: 4px solid rgb(210, 164, 105);
-
 }
 
 i{
@@ -327,6 +326,7 @@ i{
 }
 #msg{
     color: #569e49;
+    color: #be2c27;
     display: block;
     margin-top: 10px;
 }
@@ -338,4 +338,89 @@ i{
     font-weight: 400;
     margin-top: 20px;
     color:rgb(238, 238, 238);
+}
+
+@media only screen and (max-width: 700px){
+    .side-image2 {
+        border-radius: 15%;
+        position: absolute;
+        text-align: center; 
+        vertical-align: middle;
+        
+        /* top: 49%; 
+        left: 23%; */
+        width: 160px; /* Adjust the width as needed */
+        height: auto; /* Adjust the height as needed or remove to maintain aspect ratio */
+        border: 4px solid rgb(210, 164, 105);
+    }
+    .side-image{
+        position:absolute;
+        top:250px;
+        left:0;
+        right:0;
+        bottom:0;
+        margin:auto;
+        width: 200px; /* Adjust the width as needed */
+        height: auto; /* Adjust the height as needed or remove to maintain aspect ratio */
+
+
+    }
+    /*
+    #header{
+        background-image: url(images/phone-background.png);
+    }
+    
+    
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fas{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    } */
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .copyright{
+        font-size: 14px;
+    }
 }
