--- a/styles.css
+++ b/styles.css
@@ -351,7 +351,7 @@ i{
 }
 
 @media only screen and (max-width: 700px){
-    .side-image2 {
+    /* .side-image2 {
         border-radius: 15%;
         position: absolute;
         text-align: center; 
@@ -359,7 +359,7 @@ i{
         width: 160px;
         height: auto; 
         border: 4px solid rgb(210, 164, 105);
-    }
+    } */
     .side-image{
         position:absolute;
         top: 300px;
@@ -402,6 +402,7 @@ i{
         flex-basis: 100%;
     }
     .about-col-1{
+        text-align: center;
         margin-bottom: 30px;
     }
     .about-col-2{
