--- a/styles.css
+++ b/styles.css
@@ -360,9 +360,12 @@ i{
         height: auto; 
         border: 4px solid rgb(210, 164, 105);
     } */
+    #home{
+        height: 95vh !important;
+    }
     .side-image{
         position:absolute;
-        top: 250px;
+        top: 350px;
         left:0;
         right:0;
         bottom:0;
