--- a/styles.css
+++ b/styles.css
@@ -199,10 +199,10 @@ nav ul li span:hover::after{
 .side-image {
     border-radius: 15%;
     position: absolute;
-    top: 29%; /* Adjust the top position as needed */
-    left: 63%; /* Adjust the left position as needed */
-    width: 20%; /* Adjust the width as needed */
-    height: auto; /* Adjust the height as needed or remove to maintain aspect ratio */
+    top: 28%; 
+    left: 64%; 
+    width: 23%; 
+    height: auto; 
     border: 4px solid rgb(210, 164, 105);
 }
 
@@ -391,7 +391,7 @@ i{
         margin-left: 0% !important;
     }
     #contact{
-        padding-top: 140%;
+        padding-top: 110%;
     }
     #contact-info{
         text-align: center !important;
