--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ html::-webkit-scrollbar{
 }
 .nav-link:hover{
     color:#e99133 !important;
-
 }
 
 .nav-link.active {
@@ -255,6 +254,10 @@ i{
     font-weight: 500;
     cursor: pointer;
     position: relative;
+}
+.tab-links:hover{
+    color:#8f8f8f;
+    transition: color 0.3s ease-in-out;
 }
 .tab-links::after{
     content: "";
