--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,52 @@ i{
     font-size: 20px;
     color: rgb(152, 149, 149);
 }
+
+
+/* Wave */
+
+.wave {
+    animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+    animation-duration: 2.5s;        /* Change to speed up or slow down */
+    animation-iteration-count: infinite;  /* Never stop waving :) */
+    transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+    display: inline-block;
+  }
+  
+  @keyframes wave-animation {
+      0% { transform: rotate( 0.0deg) }
+     10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+     20% { transform: rotate(-8.0deg) }
+     30% { transform: rotate(14.0deg) }
+     40% { transform: rotate(-4.0deg) }
+     50% { transform: rotate(10.0deg) }
+     60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+    100% { transform: rotate( 0.0deg) }
+  }
+  
+
+
+
+/* _________Portfoltio_________ */
+
+#portfolio{
+    padding: 30px;
+    color: #e3e3e3;
+    height: 500px;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.center {
+    margin: auto;
+    width: 40%;
+    /* border: 3px solid #73AD21; */
+    padding: 10px;
+}
+
+
 .tab-titles{
     display: flex;
     margin: 20px 0 40px;
@@ -301,24 +347,6 @@ i{
     width: 90%;
 }
 
-/* _________Portfoltio_________ */
-
-#portfolio{
-    padding: 30px;
-    color: #e3e3e3;
-    height: 500px;
-}
-.row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.center {
-    margin: auto;
-    width: 40%;
-    /* border: 3px solid #73AD21; */
-    padding: 10px;
-}
 /*_____________Contact Section__________________*/
 
 #contact{
